--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -70,6 +70,8 @@ dependencies = [
   "cssutils>=2.9.0",
   "fastapi-sso>=0.9.0",
   "daytona>=0.21.6",
+  "google-cloud-aiplatform>=1.45.0",
+  "vertexai>=1.45.0",
 ]
 
 [project.urls]
