--- a/frontend/package.json
+++ b/frontend/package.json
@@ -70,7 +70,7 @@
     "date-fns": "^3.6.0",
     "diff": "^7.0.0",
     "extract-colors": "^4.2.0",
-    "flags": "^3.2.0",
+    "flags": "^4.0.1",
     "framer-motion": "^12.6.5",
     "geist": "^1.2.1",
     "gsap": "^3.13.0",
@@ -87,6 +87,7 @@
     "next": "^15.3.1",
     "next-themes": "^0.4.6",
     "papaparse": "^5.5.2",
+    "pdf-parse": "^1.1.1",
     "pdfjs-dist": "4.8.69",
     "postcss": "8.4.33",
     "posthog-js": "^1.258.6",
