--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -70,6 +70,7 @@ dependencies = [
   "cssutils>=2.9.0",
   "fastapi-sso>=0.9.0",
   "daytona>=0.21.6",
+  "sentence-transformers>=5.1.0",
 ]
 
 [project.urls]
