--- a/backend/.env.example
+++ b/backend/.env.example
@@ -115,3 +115,9 @@ IMAGE_EDIT_MODEL=
 
 # Frontend
 NEXT_PUBLIC_URL=
+
+##### BILLING (Optional;)
+STRIPE_SECRET_KEY=
+STRIPE_WEBHOOK_SECRET=
+STRIPE_DEFAULT_PLAN_ID=
+STRIPE_DEFAULT_TRIAL_DAYS=14
